--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,25 +1,7 @@
-<header>
-  <div class="top-wrapper">
-    <div class="header-left">
-      <%= link_to 'Be ambitious', root_path, class: "header-logo" %>
-    </div>
-    <div class="header-right">
-      <ul class="nav">
-        <% if company_signed_in? && current_company.id == @company.id %>
-          <li><%= link_to "こんにちは、#{current_company.company_name}様", company_path(current_company.id), class: "hello" %></li>
-          <li><%= link_to 'ログアウト', destroy_company_session_path, method: :delete, class: "sign-out" %></li>
-        <% elsif user_signed_in? %>
-          <li><%= link_to "こんにちは、#{current_user.nickname}さん", user_path(current_user.id), class: "hello" %></li>
-          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "sign-out" %></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</header>
-
 <div style="background-image:url(/images/guitar.png)" class="detail-contents">
   <div class="context">
     <% if company_signed_in? && current_company.id == @company.id %>
+    <%# ================================== マイページ部分 ======================================= %>
       <div class="detail-container">
         <h1 class="cp_h1title">マイページ</h1>
         <div class="information-wrapper">
@@ -43,7 +25,9 @@
           </div>
         </div>
       <div>
+    <%# ================================== マイページ部分 ======================================= %>
     <% elsif user_signed_in? %>
+    <%# ================================== 企業情報詳細ページ =================================== %>
       <div class="detail-container">
         <h1 class="cp_h1title"><%= "#{@company.company_name}さんのプロフィール" %></h1>
         <div class="information-wrapper">
@@ -63,37 +47,37 @@
             <div class="profile-text">
               <%= @company.detail %>
             </div>
-
+            <%# ======= フォローをするもしくは外す機能の実装。相互フォローになるとマッチング成功の表示 ======== %>
             <% if @user_relations.present? %>
               <%= link_to 'フォローを外す', company_user_relation_path(@company.id), method: :delete, remote: true, class:'unfollow-btn', id: "unfollow" %>
               <% if @company_relations.present? %>
                 <div class="match">Congratulations!</div>
                 <div class="arrow">マッチングしました！</div>
-
+            <%# ======= マッチング成功後、チャットへ。部屋がない場合は部屋を作成 ======== %>
                 <% if @company_ids.include?(@company.id) %>
                   <br>
                   <%= link_to "チャットへ", room_path(current_user.rooms.find_by(company_id: @company.id)), class: "to-chat" %><br>
                 <% else %>
                   <%= form_for Room.new do |f| %>
                     <%= f.hidden_field :company_id, :value => @company.id %>
-                    <%= f.submit %>
+                    <%= f.submit "チャットを開始する", class: "to-chat" %>
                   <% end %>
                 <% end %>
-
+            <%# ======= マッチング成功後、チャットへ。部屋がない場合は部屋を作成 ======== %>
               <% end %>
             <% else %>
-              <%#= link_to 'フォローする', company_user_relations_path(@company.id), method: :post, remote: true, class:'relation' %>
               <%= form_with model: @user_relation, url: company_user_relations_path(@company.id), id: "form", local: true do |f| %>
                 <%= f.hidden_field :user_id, :value => current_user.id %>
                 <%= f.hidden_field :company_id, :value => @company.id %>
                 <%= f.submit "フォローする", id: "btn", class: "follow-btn" %>
               <% end %>
             <% end %>
-
+            <%# ======= フォローをするもしくは外す機能の実装。相互フォローになるとマッチング成功の表示 ======== %>
           </div>
         </div>
       <div>
     <% end %>
+    <%# ================================== 企業情報詳細ページ =================================== %>
   </div>
 </div>
 <div class="footer">
