アプリ名とコードの変更

--- a/app/views/companies/registrations/edit.html.erb
+++ b/app/views/companies/registrations/edit.html.erb
@@ -96,7 +96,7 @@
   </div>
 </div>
 <div class="footer">
-  <div class="my-name">presented by Sho.</div>
+  <div class="my-name">development by Sho.</div>
 </div>
 
 <%#= link_to "Back", :back %>
