--- a/app/views/companies/registrations/new.html.erb
+++ b/app/views/companies/registrations/new.html.erb
@@ -72,7 +72,7 @@
   </div>
 </div>
 <div class="form-footer">
-  <div class="my-name">presented by Sho.</div>
+  <div class="my-name">development by Sho.</div>
 </div>
 
 <%#= render "companies/shared/links" %>
