--- a/app/views/company_messages/show.html.erb
+++ b/app/views/company_messages/show.html.erb
@@ -39,7 +39,7 @@
       </div>
     <% end %>
     <div class="message-footer">
-      <div class="footer-name">presented by Sho.</div>
+      <div class="footer-name">development by Sho.</div>
     </div>
   </div>
 
