--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -37,7 +37,7 @@
       </div>
     <% end %>
     <div class="message-footer">
-      <div class="footer-name">presented by Sho.</div>
+      <div class="footer-name">development by Sho.</div>
     </div>
   </div>
   
