--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -83,7 +83,7 @@
     <% end %>
 
     <div class="message-footer">
-      <div class="footer-name">presented by Sho.</div>
+      <div class="footer-name">development by Sho.</div>
     </div>
   </div>
 </div>
