--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -51,5 +51,5 @@
     </div>
 </div>
 <div class="footer">
-  <div class="my-name">presented by Sho.</div>
+  <div class="my-name">development by Sho.</div>
 </div>
