--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -75,7 +75,7 @@
   </div>
 </div>
 <div class="form-footer">
-  <div class="my-name">presented by Sho.</div>
+  <div class="my-name">development by Sho.</div>
 </div>
 
 <%#= link_to "Back", :back %>
