--- a/app/views/companies/registrations/new.html.erb
+++ b/app/views/companies/registrations/new.html.erb
@@ -16,7 +16,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :password %>
+          <%= f.label "パスワード" %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
@@ -24,7 +24,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :password_confirmation %><br />
+          <%= f.label "パスワード確認" %><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input' %>
         </div>
 
