--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -248,7 +248,6 @@ header {
 
 .main {
   padding-top: 90px;
-  background-image: url("images/Live.png");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -256,10 +255,10 @@ header {
   text-align: center;
   display: flex;
   justify-content: center;
+  overflow: auto;
   position: absolute;
   top: 0px;
   left: 0px;
-  overflow: auto;
 }
 
 .main::before {
@@ -455,9 +454,6 @@ header {
   background-size: cover;
   width: 100%;
   height: 100vh;
-  position: absolute;
-  top: 0px;
-  left: 0px;
   text-align: center;
 }
 
@@ -477,6 +473,28 @@ header {
   position: absolute;
   font-size: 40px;
   color: white;
+}
+
+.edit-main {
+  padding-top: 90px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: calc(100% - 90px);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  overflow: auto;
+}
+
+.edit-main::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.4);
 }
 
 /* 詳細ページ ============================ */
@@ -645,6 +663,19 @@ header {
   border-radius: 10px;
   padding: 4px;
   margin-bottom: 10px;
+}
+
+.edit-profile {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #75A9FF;
+  color: white;
+  border: none;
+  height: 40px;
+  border-radius: 10px;
+  padding: 0 4px;
+  line-height: 40px;
+  margin: 20px;
 }
 
 /* ========== message ===================*/
