--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="main" style="background-image:url(/images/Live.png)">
-  <div class="inner">
+  <div class="user-inner">
     <div class="form__wrapper">
       <h2 class="page-heading">Edit</h2>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
