背景画像を圧縮したものに変更

--- a/app/views/companies/registrations/new.html.erb
+++ b/app/views/companies/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main" style="background-image:url(/images/Live.png)">
+<div class="main" style="background-image:url(/images/concert.png)">
   <div class="company-inner">
     <div class="form__wrapper">
       <h2 class="page-heading">Sign up</h2>
