--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,4 @@
-<div style="background-image:url(/images/Live.png)" class="contents-wrapper">
+<div style="background-image:url(/images/concert.png)" class="contents-wrapper">
     <div class="context">
       <% if user_signed_in? %>
         <div class="index-container">
