--- a/app/views/companies/registrations/edit.html.erb
+++ b/app/views/companies/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="edit-main" style="background-image:url(/images/Live.png)">
+<div class="edit-main" style="background-image:url(/images/concert.png)">
   <div class="company-inner">
     <div class="form__wrapper">
       <h2 class="page-heading">Edit</h2>
